Copied code for Home Controller from MvcWebSample to NetCoreSample, and added and refactored dependent classes. Refactored namespace for netcore project from ExpressiveAnnotations to ExpressiveAnnotations.NetCore. Fixed a few asp.net dependencies.

--- a/src/ExpressiveAnnotations.NetCoreSample/ExpressiveAnnotations.NetCoreSample.csproj
+++ b/src/ExpressiveAnnotations.NetCoreSample/ExpressiveAnnotations.NetCoreSample.csproj
@@ -8,4 +8,23 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExpressiveAnnotation.NetCore\ExpressiveAnnotations.NetCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources.resx">
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
