--- a/src/ExpressiveAnnotations.NetCoreSample/ExpressiveAnnotations.NetCoreSample.csproj
+++ b/src/ExpressiveAnnotations.NetCoreSample/ExpressiveAnnotations.NetCoreSample.csproj
@@ -21,6 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\css\site.css">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
