--- a/.gitignore
+++ b/.gitignore
@@ -108,9 +108,10 @@ Backup*/
 UpgradeLog*.XML
 
 # Linked content script files (copied automatically before each build)
-/src/ExpressiveAnnotations.MvcWebSample/Scripts/expressive.annotations.validate*.js
+/src/UoN.ExpressiveAnnotations.MvcWebSample/Scripts/expressive.annotations.validate*.js
 /bower_components
 /node_modules
+node_modules/
 /build/[0-9]*
 /build/nuget.exe
 /build/*.html
@@ -119,5 +120,5 @@ UpgradeLog*.XML
 /build/*.js
 /src/_Chutzpah.*
 /.vs
-/src/ExpressiveAnnotations.MvcWebSample/Properties/PublishProfiles/FolderProfile.pubxml
+/src/UoN.ExpressiveAnnotations.MvcWebSample/Properties/PublishProfiles/FolderProfile.pubxml
 /src/.vs
