Modified BundleConfig to only produce the minified bundles, and added Library Manager to the project to copy the rest of the css, js and fonts to wwwroot. Modified gitignore to ignore all the files copied as part of the build.

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,9 @@ node_modules/
 /.vs
 /src/UoN.ExpressiveAnnotations.MvcWebSample/Properties/PublishProfiles/FolderProfile.pubxml
 /src/.vs
+
+/src/UoN.ExpressiveAnnotations.NetCoreSample/wwwroot/css/bootstrap.css
+/src/UoN.ExpressiveAnnotations.NetCoreSample/wwwroot/css/site.min.css
+/src/UoN.ExpressiveAnnotations.NetCoreSample/wwwroot/fonts/
+/src/UoN.ExpressiveAnnotations.NetCoreSample/wwwroot/js/
+
