--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/bundleconfig.json
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/bundleconfig.json
@@ -1,84 +1,11 @@
 [
-    //{
-    //    "outputFileName": "wwwroot/css/bootstrap.css",
-    //    "inputFiles": [
-    //        "node_modules/bootstrap/dist/bootstrap.css"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
-    //{
-    //    "outputFileName": "wwwroot/js/bootstrap.js",
-    //    "inputFiles": [
-    //        "node_modules/bootstrap/dist/bootstrap.js"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
-    //{
-    //    "outputFileName": "wwwroot/js/expressive.annotations.validate.js",
-    //    "inputFiles": [
-    //        "node_modules/expressive-annotations-validate/dist/expressive.annotations.validate.js"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
-    //{
-    //    "outputFileName": "wwwroot/js/jquery.js",
-    //    "inputFiles": [
-    //        "node_modules/jquery/dist/jquery.js"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
-    //{
-    //    "outputFileName": "wwwroot/js/jquery.validate.js",
-    //    "inputFiles": [
-    //        "node_modules/jquery-validation/dist/jquery.validate.js"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
-    //{
-    //    "outputFileName": "wwwroot/js/jquery.validate.unobtrusive.js",
-    //    "inputFiles": [
-    //        "node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"
-    //    ],
-    //    "minify": {
-    //        "enabled": false,
-    //        "renameLocals": false
-    //    },
-    //    "sourceMap": true
-    //},
-
     {
         "outputFileName": "wwwroot/js/site.min.js",
         "inputFiles": [
             "node_modules/expressive-annotations-validate/dist/expressive.annotations.validate.js",
             "node_modules/jquery/dist/jquery.js",
             "node_modules/jquery-validation/dist/jquery.validate.js",
-            "node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js",
-            "node_modules/bootstrap/dist/js/bootstrap.js"
+            "node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"
         ],
         "minify": {
             "enabled": true,
@@ -90,8 +17,7 @@
     {
         "outputFileName": "wwwroot/css/site.min.css",
         "inputFiles": [
-            "wwwroot/css/site.css",
-            "node_modules/bootstrap/dist/css/bootstrap.css"
+            "wwwroot/css/site.css"
         ],
         "minify": {
             "enabled": true,
