Ci to nuget (#9)
* Added metadata for Nuget to library csproj.

* Added travis yml.

* Changed version number to add beta-1

* Changed name of solution file from ExpressiveAnnotations to UoN.ExpressiveAnnotations.NetCore.

* Fixed link in readme to travis build (wrong organisation), and .Net Core version in Travis yml (2.1 rather than 2.1.0).

* Travis link to master rather than develop.

* Remove hyphen from beta-1 for consistency with other UoN-Nuget packages.

* Removed beta1 from library version number ready for release.

* Resolved comments from review. Fixed Build Status link and added Nuget badge in readme. Added package icon URL and a couple of extra tags in the csproj.

--- a/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
+++ b/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
@@ -2,6 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageVersion>0.1.0</PackageVersion>
+
+    <Authors>UoN Application Development</Authors>
+
+    <Description>
+Fork of Jarosław Waliszko's Expressive Annotations .NET library, adding support for .NET Core. Expressive Annotations provides new flexible and powerful model validation attributes, to add to the attributes built in to .NET.
+    </Description>
+
+    <PackageReleaseNotes>
+This release supports client-side validation in .NET Core, using RequiredIf and AssertThat attributes. ValueParser has not been implemented. ToolChain functions and custom-defined functions have not been tested and may not work. 
+    </PackageReleaseNotes>
+
+    <Copyright>Copyright 2018 (c) University of Nottingham.</Copyright>
+
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageIconUrl>https://raw.githubusercontent.com/uon-nuget/assets/master/nuget-package-icon.png</PackageIconUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/uon-nuget/UoN.ExpressiveAnnotations.NetCore/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/uon-nuget/UoN.ExpressiveAnnotations.NetCore</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/uon-nuget/UoN.ExpressiveAnnotations.NetCore</RepositoryUrl>
+
+    <PackageTags>UoN Validation Unobtrusive DataAnnotations Annotations</PackageTags>
+
   </PropertyGroup>
 
   <ItemGroup>
