--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/UoN.ExpressiveAnnotations.NetCoreSample.csproj
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/UoN.ExpressiveAnnotations.NetCoreSample.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.163" />
   </ItemGroup>
 
