Removed validation js files from minified js in bundleconfig, Changed Home and Layout pages so that Validation scripts are only included when client validation option is selected in the GUI (as per the original version of EA).

--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/bundleconfig.json
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/bundleconfig.json
@@ -2,10 +2,7 @@
     {
         "outputFileName": "wwwroot/js/site.min.js",
         "inputFiles": [
-            "node_modules/expressive-annotations-validate/dist/expressive.annotations.validate.js",
-            "node_modules/jquery/dist/jquery.js",
-            "node_modules/jquery-validation/dist/jquery.validate.js",
-            "node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"
+            "node_modules/jquery/dist/jquery.js"
         ],
         "minify": {
             "enabled": true,
