--- a/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
+++ b/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
@@ -11,7 +11,7 @@ Fork of Jarosław Waliszko's Expressive Annotations .NET library, adding support
     </Description>
 
     <PackageReleaseNotes>
-This release simplifies the way that the package is configured in Startup.cs. The startup code required for previous versions of this package will not compile with this version. See the readme on github under 'Add code to Startup'.
+This release simplifies the way that the package is configured in Startup.cs. If you were using a previous version of this package, you will need to change the code in your startup class. See the readme on github under 'Add code to Startup'.
     </PackageReleaseNotes>
 
     <Copyright>Copyright 2018 (c) University of Nottingham.</Copyright>
