--- a/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
+++ b/src/UoN.ExpressiveAnnotations.NetCore/UoN.ExpressiveAnnotations.NetCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageVersion>0.1.1</PackageVersion>
+    <PackageVersion>1.0.0</PackageVersion>
 
     <Authors>UoN Application Development</Authors>
 
@@ -11,7 +11,7 @@ Fork of Jarosław Waliszko's Expressive Annotations .NET library, adding support
     </Description>
 
     <PackageReleaseNotes>
-This release fixes an issue in 0.1.0 where client-side validation only functioned for one annotation of the same type per property.
+This release simplifies the way that the package is configured in Startup.cs. If you were using a previous version of this package, you will need to change the code in your startup class. See the readme on github under 'Add code to Startup'.
     </PackageReleaseNotes>
 
     <Copyright>Copyright 2018 (c) University of Nottingham.</Copyright>
@@ -29,6 +29,7 @@ This release fixes an issue in 0.1.0 where client-side validation only functione
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
